# cours-python

./: .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  README.md  TODO  TODO.md  deploy.py  ideas  notes.md  pre-push-hook  pyproject.toml  resources
cours/: TODO  build.in.ninja  build.py  config.yaml  deploy.py  e2l-python-modules-01.md  modules-01.md  pyproject.toml
cours/content/: _index.md
cours/source/: conf.py  index.rst
cours/source/01-introduction/: 01-introduction.md  01-introduction.rst  02-le-langage-python.rst  _index.md  index.rst
cours/source/02-premiers-pas/: 01-bases-ligne-de-commandes.rst  02-installation.rst  02-interpréteur.rst  03-code-source.rst  03-maths-simples.rst  04-maths-simples.rst  index.rst
cours/source/03-variables-et-types/: 01-variables.rst  02-chaînes-de-caractères.md  02-chaînes-de-caractères.rst  03-types.rst  04-booléens.rst  index.rst
cours/source/04-booléens/: index.rst
cours/source/04-code-source/: _index.md  index.rst
cours/source/04-contrôle-de-flux/: 01-contrôle-de-flux.rst  02-falsy-truthy.rst  03-exercice.rst  index.rst
cours/source/04-flot-de-controle/: 01-flot-de-contrôle.rst  03-exercice.rst  index.rst
cours/source/05-flot-de-controle/: 01-flot-de-contrôle.rst  02-exercice.rst  _index.md  index.rst
cours/source/05-fonctions-01/: 01-functions.rst  02-portée-des-variables.rst  03-plusieurs-arguments.rst  03-return.rst  04-par-défaut.rst  04-plusieurs-arguments.rst  05-fonctions-natives.rst  05-par-défaut.rst  06-return.rst  07-exercice.rst  index.rst
cours/source/06-fonctions-01/: index.rst  (+2 more)
(+335 files in other folders)
