[tool.poetry]
name = "cours-python"
version = "0.1.0"
description = "Programmation en Python"
authors = ["Dimitri Merejkowsky <dimitri.merejkowsky@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^3.4.3"
sphinx-notfound-page = "^0.5"
sphinx-book-theme = "^0.0.39"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
