[metadata]
name = stegano
version = 0.1.0
description = simple steagography script
author = e2l

[options]
py_modules = ["stegano"],

install_requires =
  Pillow

classifiers =
  "Programming Language :: Python :: 3"


[options.extras_require]
dev =
  black
  pytest

[options.entry_points]
console_scripts =
   stegano = stegano:main
